cerberus/deploy/70-cerberus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerberus
  namespace: cerberus
  labels:
    tool: Cerberus
spec:
  replicas: 1
  selector:
    matchLabels:
      tool: Cerberus
  template:
    metadata:
      labels:
        tool: Cerberus
    spec:
      serviceAccountName: cerberus
      containers:
        - name: cerberus
          securityContext:
            privileged: true
          image: quay.io/openshift-scale/cerberus:latest
          command: ["/bin/sh", "-c"]
          args: ["python3 start_cerberus.py -c config/config.yaml"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/root/.kube"
              name: config
            - mountPath: "/root/cerberus/config"
              name: cerberus-config
      volumes:
        - name: config
          configMap:
            name: kube-config
        - name: cerberus-config
          configMap:
            name: cerberus-config
