cerberus/deploy/80-cerberus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerberus
  namespace: cerberus
  labels:
    tool: Cerberus
spec:
  type: ClusterIP
  selector:
    tool: Cerberus
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
