cerberus/deploy/90-cerberus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cerberus
  namespace: cerberus
  labels:
    tool: Cerberus
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: cerberus
    weight: 100
